[package]
name = "example_utils"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Example helpers"
readme.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
publish = false

[dependencies]
bevy = {workspace = true}

[lints]
workspace = true