[package]
name = "menu_data"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Menu data"
readme.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
publish = false

[dependencies]
bevy = {workspace = true}

[lints]
workspace = true