[package]
name = "register"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Type registration"
readme.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
publish = false

[dependencies]
bevy = {workspace = true}
data = { workspace = true }

[lints]
workspace = true
