[package]
name = "settings"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Settings of smoke_and_powder"
readme.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
publish = false

[dependencies]
bevy = {workspace = true, features = ["serialize"]}
# bevy_rapier2d = { workspace = true, features = [ "simd-stable", "debug-render-2d" ] }
rand = { workspace = true, features = [ "alloc" ] }
dirs = {workspace = true}
ron = {workspace = true}
# csv = "1"
serde = { workspace = true, features = ["derive"] }
# phf = { workspace = true, features = ["macros"] }
state = {workspace = true}
strum = { workspace = true }

[lints]
workspace = true