[package]
name = "utility"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Helpers"
readme.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
publish = false

[dependencies]
bevy = {workspace = true}
rand = { workspace = true }

[lints]
workspace = true
